# image-uploader

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  dev.Dockerfile  docker-compose.yml  dynamic.yaml  linux.Dockerfile  recipe.json  sample.sxcu
.github/workflows/: binaries.yml  docker.yml
src/: auth.rs  id.rs  main.rs  models.rs
templates/: gallery.html  login.html  upload.html
