# syntax = denzp/cargo-wharf-frontend:v0.1.0-alpha.2
[package]
name = "dag_cdn"
version = "0.1.0"
authors = ["GitHub <noreply@github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
actix-files = "0.5.0"
actix-ratelimit = "0.3.1"
env_logger = "0.8"
actix-multipart = "0.3"
futures = "0.3.5"
async-std = "1.8.0"
sanitize-filename = "0.2"
rand = "0.8.3"
regex = "1"
serde_json = "1.0.61"
actix-cors="0.5.4"
actix-web-httpauth = "0.5.0"
lazy_static = "1.4.0"
dotenv = "0.15.0"
tera = "1"
actix-identity = "0.3.1"
actix_session="0.4"

[package.metadata.wharf.builder]
image = "rust"

[package.metadata.wharf.output]
image = "gcr.io/distroless/cc-debian10"
entrypoint = ["cdn"]
stop-signal = "SIGINT"
volumes=["/static"]

[package.metadata.wharf.output.labels]
"simple-label" = "simple value"
"my.awesome.label" = "another value"

[[package.metadata.wharf.binary]]
name = "dag_cdn"
destination = "/usr/local/bin/cdn"

